# switchy-podcast-auto-switcher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  buildspec.json
.github/workflows/: build.yml
data/locale/: en-US.ini
src/: audio-monitor.cpp  audio-monitor.h  config.cpp  config.h  obs-config.h  plugin-main.cpp  switch-engine.cpp  switch-engine.h  utils.cpp  utils.h
src/ui/: dock-widget.cpp  dock-widget.h  settings-dialog.cpp  settings-dialog.h
